# AoC2025

./: .gitignore  aoc2025.cabal  stack.yaml
src/: Day00.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day08.hs  Day10.hs  Main.hs
src/Utils/: Graph.hs  Range.hs
test/: Day00Spec.hs  Day01Spec.hs  GraphSpec.hs
